--- a/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
+++ b/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
@@ -11,6 +11,8 @@
     <PropertyGroup>
         <TargetFramework>net6.0-ios</TargetFramework>
 
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <MtouchExtraArgs>-v -v -v -v</MtouchExtraArgs>
         <!-- warning CS0114: 'LegacyDFUServiceInitiator.StartWithTargetWithIdentifier(NSUuid)' hides inherited member 'DFUServiceInitiator.StartWithTargetWithIdentifier(NSUuid)'. To make the current member override that implementation, add the override keyword. Otherwise add the new keyword. -->
         <!-- warning CS0114: 'SecureDFUServiceInitiator.StartWithTargetWithIdentifier(NSUuid)' hides inherited member 'DFUServiceInitiator.StartWithTargetWithIdentifier(NSUuid)'. To make the current member override that implementation, add the override keyword. Otherwise add the new keyword. -->
         <NoWarn>CS0114</NoWarn>
