--- a/Laerdal.Dfu.Bindings.iOS/Laerdal.targets
+++ b/Laerdal.Dfu.Bindings.iOS/Laerdal.targets
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
+
+    <!-- ==================== DEFAULT CONFIGURATION ==================== -->
     <PropertyGroup>
-        <IsBindingProject>true</IsBindingProject>
+        <Optimize>false</Optimize>
+        <LangVersion>latest</LangVersion>
+        <NeutralLanguage>en</NeutralLanguage>
         <DebugSymbols>true</DebugSymbols>
+        <OutputPath>bin\</OutputPath>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
         <OutputType>Library</OutputType>
+
         <PackOnBuild>true</PackOnBuild>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
@@ -32,6 +38,7 @@
         <!-- https://docs.gitlab.com/ee/ci/variables/predefined_variables.html -->
         <ContinuousIntegrationBuild Condition="'$(GITLAB_CI)' == 'true'">true</ContinuousIntegrationBuild>
     </PropertyGroup>
+
 
     <!-- ==================== PACKAGING ==================== -->
     <PropertyGroup>
@@ -60,7 +67,7 @@
         <PackageIcon Condition="Exists('$(PackageIconPath)')">icon.png</PackageIcon>
         <PackageLicense Condition="Exists('$(PackageLicencePath)')">LICENSE</PackageLicense>
         <!-- https://github.com/NuGet/Home/issues/10791 -->
-        <!-- <PackageReadmeFile Condition="Exists('$(PackageReadMePath)')">$(PackageReadMePath)</PackageReadmeFile> -->
+        <PackageReadmeFile Condition="Exists('$(PackageReadMePath)')">README.md</PackageReadmeFile>
     </PropertyGroup>
     <ItemGroup>
         <None Include="$(PackageIconPath)" Pack="true" PackagePath="\" Condition="Exists('$(PackageIconPath)')" />
@@ -83,17 +90,22 @@
     </ItemGroup>
 
     <!-- ==================== LOGGING ==================== -->
-    <Target Name="PrintBuildInfo" BeforeTargets="CoreCompile">
+    <Target Name="PrintBuildInfo" BeforeTargets="_IsProjectRestoreSupported">
+        <Message Importance="High" Text="*** Package Info ***" />
         <Message Importance="High" Text="PackageId: $(PackageId)" />
-        <Message Importance="High" Text="TargetFramework: $(TargetFramework)" />
         <Message Importance="High" Text="Configuration: $(Configuration)" />
         <Message Importance="High" Text="Platform: $(Platform)" />
         <Message Importance="High" Text="PackageVersion: $(PackageVersion)" />
         <Message Importance="High" Text="AssemblyVersion: $(AssemblyVersion)" />
+        <Message Importance="High" Text="AssemblyFileVersion: $(AssemblyFileVersion)"/>
         <Message Importance="High" Text="Version: $(Version)" />
-        <Message Importance="High" Text="DefineConstants: $(DefineConstants)" />
         <Message Importance="High" Text="MSBuildRuntimeType: $(MSBuildRuntimeType)" />
         <Message Importance="High" Text="##vso[build.updatebuildnumber]$(PackageVersion)" />
+    </Target>
+    <Target Name="PrintPlatformBuildInfo" BeforeTargets="CoreCompile">
+        <Message Importance="High" Text="*** Platform Info ***" />
+        <Message Importance="High" Text="TargetFramework: $(TargetFramework)" />
+        <Message Importance="High" Text="DefineConstants: $(DefineConstants)" />
     </Target>
 
     <!-- ==================== VERSION ==================== -->
