--- a/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
+++ b/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
@@ -1,19 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="MSBuild.Sdk.Extras/3.0.44">
+
     <PropertyGroup>
         <Laerdal_Package_Name>Laerdal.Dfu.Bindings.iOS</Laerdal_Package_Name>
         <Laerdal_Package_Tags>Ble;Tools;Xamarin;Dfu;Bluetooth;Nordic;Semiconductor</Laerdal_Package_Tags>
         <Laerdal_Package_Copyright>Laerdal Medical, Francois Raminosona</Laerdal_Package_Copyright>
         <Laerdal_Package_Description>Xamarin wrapper around Nordic.Dfu for iOS.</Laerdal_Package_Description>
-    
+    </PropertyGroup>
+
+    <PropertyGroup>
         <Nordic_Package_Version>4.11.1</Nordic_Package_Version>
         <!-- <BuildWithMSBuildOnMono>false</BuildWithMSBuildOnMono> -->
     </PropertyGroup>
 
     <PropertyGroup>
-        <TargetFramework>net6.0-ios</TargetFramework>
+        <TargetFramework>xamarin.ios10</TargetFramework>
 
         <MtouchExtraArgs>-v -v -v -v</MtouchExtraArgs>
         
+        <IsBindingProject>true</IsBindingProject>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <MtouchNoSymbolStrip>true</MtouchNoSymbolStrip>
         <Optimize>false</Optimize>
@@ -26,6 +30,8 @@
     <Import Project="Laerdal.targets" />
 
     <ItemGroup>
+        <Compile Remove="ApiDefinition.cs" />
+        <Compile Remove="StructsAndEnums.cs" />
         <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
         <ObjcBindingCoreSource Include="StructsAndEnums.cs" />
 
