--- a/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
+++ b/Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
@@ -10,7 +10,7 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <TargetFramework>net6.0-ios;net7.0-ios</TargetFramework>
+        <TargetFrameworks>net6.0-ios;net7.0-ios</TargetFrameworks>
 
         <MtouchExtraArgs>-v -v -v -v</MtouchExtraArgs>
         
