--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -10,17 +10,11 @@ pool:
 steps:
   - checkout: self
     clean: true
+    persistCredentials: true
   - task: NuGetToolInstaller@1
     displayName: 'Use NuGet'
     inputs:
       checkLatest: true
-
-  - task: DotNetCoreCLI@2
-    displayName: dotnet workload restore
-    inputs:
-      command: custom
-      custom: 'workload'
-      arguments: 'restore Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj'
 
   - task: DotNetCoreCLI@2
     displayName: dotnet build
@@ -30,3 +24,5 @@ steps:
 
   - publish: $(Build.ArtifactStagingDirectory)
     artifact: output
+  - publish: $(Build.SourcesDirectory)
+    artifact: source
