--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,5 +19,9 @@ jobs:
 
       - uses: actions/checkout@v3
       
+      
+      - run: dotnet dotnet workload restore
+        shell: bash
+        
       - run: dotnet build -p:PackageOutputPath="$Build_Artifact_Staging_Directory/Artifacts/"
         shell: bash
