--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
       
       
-      - run: dotnet dotnet workload restore
+      - run: dotnet dotnet workload restore --project Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
         shell: bash
         
       - run: dotnet build -p:PackageOutputPath="$Build_Artifact_Staging_Directory/Artifacts/"
