--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,8 +26,10 @@ jobs:
       - run: dotnet dotnet workload restore --project Laerdal.Dfu.Bindings.iOS/Laerdal.Dfu.Bindings.iOS.csproj
         shell: bash
         
-      - run: dotnet build
+      - run: dotnet build 
         shell: bash
+        env: 
+          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish Output Artifact
         uses: actions/upload-artifact@v2
